--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -10,10 +10,10 @@ jobs:
 
     steps:
     -uses: actions/checkout@v3
-    -name: Use Node.js 18.x
+    -name: Use Node.js 20.x
      uses: actions/setup-node@v3
-     with
-       node-version: 18
-       cache:'npm'
+     with:
+       node-version: 20
+       cache: 'npm'
     -run: npm install
     -run: npx cypress run
