--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -5,13 +5,13 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  run-tests:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js 18.x
-     uses:  actions/setup-node@v3
+      uses:  actions/setup-node@v3
       with:
        node-version: 18
        cache: 'npm'
